deploy/ingress-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
    - hosts:
      - dashboard.k8s
    - secretName: kubernetes-dashboard-certs
  rules:
  - host: dashboard.k8s
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
